test/e2e/fixtures/mapping-tls-origination/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapping-tls-origination
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapping-tls-origination
  template:
    metadata:
      labels:
        app: mapping-tls-origination
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: mapping-tls-origination
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mapping-tls-origination
spec:
  selector:
    app: mapping-tls-origination
  ports:
    - name: http
      port: 443
      targetPort: 8443
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: mapping-tls-origination
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /mapping-tls-origination/
  service: https://mapping-tls-origination
